--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'WALMART_API_KEY', WalMartAPIKey
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -26,4 +30,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
